2002-09-07  Michael Banck <mbanck@gmx.net>

	* Replaced $DEST with $DESTDIR and $bindir

2002-08-30  Stefan Kebekus <kebekus@users.sourceforge.net>

	* src/math/matrix3x3.cpp, src/math/matrix3x3.h added methods, in
	particular for eigenvector calculations. Modified the API slightly. 
	* src/mol.cpp, src/obutil.cpp removed a couple of undocumented
	mathematical methods that were never used. Make mol use the 
	eigenvector functions from the matrix class now.	
	* test/matrixtest.cpp test suite for matrix algebra and eigenvector 
	calculations
	* src/oberror.cpp, src/oberror.h introduced a generic error class

2002-08-27  Stefan Kebekus <kebekus@users.sourceforge.net>

	* test/main.cpp, test/ringtest.cpp, test/smartstest.cpp resolved
	namespace problems for the tests. The test compile now, but show
	errors.

2002-08-25  Michael Banck <mbanck@gmx.net>

	* Changed charge to int (gaussian.cpp) and divisor/exponent to 
	double (c3d.cpp) in order to compile on g++-3.2

2002-08-19  Stefan Kebekus <kebekus@users.sourceforge.net>

	* src/xyz.cpp more bugfixing. The translator behaves now smarter
	when interpreting the title and the atom types.

2002-08-16  Stefan Kebekus <kebekus@users.sourceforge.net>

	* src/pdb.cpp re-wrote routine to read CONECT records. That
	(hopefully) fixes a number of bugs in the earlier version
	(inability to read 5-digit serial numbers, accidently reading salt
	bridges as connects, etc.)

2002-08-15  Geoff Hutchison <hutchisn@chem.northwestern.edu>

	* src/pdb.cc: Fix ParseConectRecord to make sure we don't read
	beyond the vs.size().


2002-08-14  Stefan Kebekus <kebekus@users.sourceforge.net>

	* src/xyz.cpp Set molecule title to the string that is read from
	the second line of the file. Set atom type strings to strings read
	from the file. The reading method now prints +extensive+ and
	+detailed+ warnings to cerr if is xyz file is bad.

2002-07-26  Stefan Kebekus <kebekus@users.sourceforge.net>
